--- a/app.json
+++ b/app.json
@@ -9,9 +9,9 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/Randi356/Vegeta-Userbot",
-  "telegram": "https://t.me/FlashProSpeed",
-  "success_url": "https://t.me/gsahmanja",
+  "repository": "https://github.com/5GVckyy/Steady-Userbot",
+  "telegram": "https://t.me/SteadySupportGroup",
+  "success_url": "https://t.me/Vckyclonee",
   "stack": "container",
   "env": {
     "API_KEY": {
