--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "VEGETA-USERBOT",
+  "name": "STEADY-USERBOT",
   "description": "[STEADY-USERBOT] USERBOT KHUSUS YANG DIGUNAKAN UNTUK BERSENANG-SENANG DI TELEGRAM.",
   "logo": "https://telegra.ph/file/42e679c5b472a949f3223.jpg",
   "keywords": [
