--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "STEADY-USERBOT",
+  "name": "SteadyUserbotTemplate",
   "description": "[STEADY-USERBOT] USERBOT KHUSUS YANG DIGUNAKAN UNTUK BERSENANG-SENANG DI TELEGRAM.",
   "logo": "https://telegra.ph/file/add31c6018ba67309bd3b.jpg",
   "keywords": [
